tooling/nargo_cli/tests/snapshots/execution_success/regression_7195/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn bar(y: Field) {
    assert(y != 0);
}

fn foo(x: Field) {
    // Safety: comment added by `nargo expand`
    let y: Field = unsafe { baz(x) };
    bar(y);
}

unconstrained fn baz(x: Field) -> Field {
    x
}

fn main(x: Field, y: pub Field) {
    // Safety: comment added by `nargo expand`
    let x: Field = unsafe { baz(x) };
    foo(x);
    foo(y);
    assert(x != y);
}
